# vcv-svghelper

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  plugin.json  thunk.cpp
include/: SvgHelper.hpp
my-library/: CMakeLists.txt
my-library/include/: foo.hpp
my-library/source/: foo.cpp
src/: Blank.cpp  Example.cpp  SvgHelper.cpp  plugin.cpp  plugin.hpp
test/: CMakeLists.txt  foo-test.cpp
